# thesis

./: .gitignore  README.md  pyproject.toml
src/experiment/: DataLoader.py  analysis.ipynb  main.py  settings.py
src/experiment/modules/: CrossConformalTrainer.py  DataLoader.py  ExperimentRunner.py  Plotter.py
src/graphs/: main.py
tests/: test_DataLoader.py  test_rf.py
