[project]
name = "thesis"
version = "0.1.0"
author = "Luigi Barba"
description = "Code for \"Assessing Concept Drift in Malware Classifiers via Conformal Prediction\""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
]

[dependency-groups]
experiment = [
    "altair[all]>=6.0.0",
    "hvplot>=0.12.2",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.8.0",
]
graphs = [
    "matplotlib>=3.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/experiment",
    "src/graphs",
    ]
